// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAvailableScripturePaneSelections getAvailableScripturePaneSelections() should work without targetBible loaded into resources 1`] = `
Array [
  Object {
    "bibleId": "ult",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ust",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ugnt",
    "bookId": "gal",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getAvailableScripturePaneSelections should work 1`] = `
Array [
  Object {
    "bibleId": "targetBible",
    "bookId": "gal",
    "languageId": "targetLanguage",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ult",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ust",
    "bookId": "gal",
    "languageId": "en",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "ugnt",
    "bookId": "gal",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getAvailableScripturePaneSelections should work OT 1`] = `
Array [
  Object {
    "bibleId": "targetBible",
    "bookId": "jol",
    "languageId": "targetLanguage",
    "manifest": "manifest",
  },
  Object {
    "bibleId": "uhb",
    "bookId": "jol",
    "languageId": "originalLanguage",
    "manifest": "manifest",
  },
]
`;

exports[`getResourcesNeededByTool() should work 1`] = `
Array [
  Object {
    "bibleId": "ult",
    "languageId": "en",
  },
  Object {
    "bibleId": "ugnt",
    "languageId": "el-x-koine",
  },
  Object {
    "bibleId": "ust",
    "languageId": "en",
  },
]
`;
